--- a/style.css
+++ b/style.css
@@ -40,3 +40,121 @@ body {
     font-weight: bold;
     box-shadow: inset  0 0 rgba(0, 0, 0, 0.2);
 }
+
+.content{
+    flex:1;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+h2{
+    font-size: 28px;
+    color: #444444;
+    margin: 0 0 20px 0 ;
+}
+
+.task-input{
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.task-input input{
+    flex: 1;
+    padding: 12px;
+    border: 1px solid #cccccc;
+    border-radius: 10px;
+    font-size: 16px;
+    outline: none;
+    transition: 0.2s border;
+}
+
+.task-input input:focus{
+    border: 1px solid #96a78d;
+}
+
+.task-input button{
+    margin-left: 10px;
+    padding: 12px 20px;
+    background: #96a78d;
+    border: none;
+    border-radius:10;
+    color: #ffffff;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: 500;
+    transition: 0.3s;
+}
+
+.task-input button:hover{
+    background: #b6ceb4;
+}
+
+ul{
+    list-style: none;
+    padding: 0;
+}
+
+li{
+    background: #ffffff;
+    margin: 15px 0;
+    padding: 15px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+    transition: 0.2s transform;
+}
+
+li:hover{
+    transform: scale(1.02);
+}
+
+li input{
+    flex: 1;
+    margin-right: 10px;
+    padding: 6px;
+    font-size: 14px;
+}
+
+li button{
+    margin-left: 5px;
+    background: #96a78d;
+    border: none;
+    border-radius: 5px;
+    color: #ffffff;
+    padding: 6px 10px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: 0.3s;
+}
+
+li button:hover{
+    background: #b6ceb4;
+}
+
+@media (max-width:768px){
+    body{
+        flex-direction: column;
+    }
+
+    .days{
+        flex-direction: row;
+        width: 100%;
+        overflow-x: auto;
+        box-shadow: none;
+    }
+    .day{
+        flex: 1;
+        margin: 5px; 
+        font-size: 14px;
+    }
+
+    .content{
+        padding: 15px;
+    }
+    h2{
+        font-size: 20px;
+    }
+}
